fixed issue with damage type not showing

--- a/src/components/IndividualSpell/IndividualSpell.css
+++ b/src/components/IndividualSpell/IndividualSpell.css
@@ -209,6 +209,7 @@
 
 .damage-type-symbol {
   margin-left: 10px;
+  font-size: 24px;
 }
 
 .con-border-yes {
